<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.Activites.MainActivity">


    <ImageButton
        android:id="@+id/start"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:background="@drawable/roundbutton"
        app:layout_constraintBottom_toTopOf="@+id/manage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.852"
        app:srcCompat="@drawable/ic_play_arrow_black_24dp"
        tools:ignore="VectorDrawableCompat" />

    <Button
        android:id="@+id/manage"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginBottom="291dp"
        android:background="@drawable/transparentbutton"
        android:text="@string/questions"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
