...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageKatt" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="228dp"
        android:background="@drawable/roundtext"
        android:ems="10"
        android:hint="@string/katteNavn"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageKatt" />

    <Button
        android:id="@+id/checkAnswerButton"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/roundbutton"
        android:text="@string/check_answer"
        android:textColor="@color/white"
...
